# metricrule-agent-python

./: .gitignore  .pylintrc  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  setup.cfg  setup.py
.github/workflows/: ci.yaml
example/: requirements.txt
example/fastapi/: server.py
example/flask/: server.py
src/metricrule/agent/: __init__.py  asgi.py  mrconfig.py  mrmetric.py  mrotel.py  mrrecorder.py  wsgi.py
tests/: test_mrmetric.py  test_mrotel.py  test_wsgi_middleware.py
