[metadata]
name = metricrule-agent-python
version = 0.0.3dev3
description = MetricRule agent for Python webservers
long_description = file: README.md
long_description_content_type = text/markdown
author = MetricRule
author_email = jishnu@metricrule.com
url = https://github.com/metricrule/metricrule-python-agent/tree/main/
platforms = any
license = Apache-2.0
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.6
install_requires =
    werkzeug

[options.packages.find]
where = src